<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/container">

    <Button
        android:id="@+id/btnTime"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:drawableTop="@drawable/tempo"
        android:text="@string/btnNameTempo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnVolumes"
        app:layout_constraintBottom_toTopOf="@+id/btnPeso"
        android:layout_margin="15dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnVolumes"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toRightOf="@+id/btnTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnArea"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/volume"
        android:text="@string/btnNameVolume"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnPeso"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@+id/btnTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnArea"
        app:layout_constraintBottom_toTopOf="@+id/btnComprimento"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/peso"
        android:text="@string/btnNamePeso"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnArea"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toRightOf="@id/btnPeso"
        app:layout_constraintTop_toBottomOf="@+id/btnVolumes"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnTemperatura"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/area"
        android:text="@string/btnNameArea"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnComprimento"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@id/btnPeso"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnTemperatura"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/comprimento"
        android:text="@string/btnNameComprimento"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnTemperatura"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toRightOf="@+id/btnComprimento"
        app:layout_constraintTop_toBottomOf="@id/btnArea"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/temperatura"
        android:text="@string/btnNameTemperatura"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>